--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -9,4 +9,14 @@
         android:singleLine="true"
         />
 
+    <ListPreference
+        android:title="@string/pref_temperature_units"
+        android:key="@string/pref_temperature_units_key"
+        android:dialogTitle="@string/pref_temperature_units"
+        android:entryValues="@array/temperature_units"
+        android:summary=""
+        android:entries="@array/temperature_units"
+        android:defaultValue="@string/pref_temperature_units_default"
+        />
+
 </PreferenceScreen>
